Capitalize on unknown sbt feature.
Nobody ever told me you can pass --error, --warn etc to sbt.
That's a big improvement because you can actually suppress all
the noise on startup.

Reworked the command line options a bit to reflect this.